# SarafanShop

./: README.md  pyproject.toml
config/: settings.py  urls.py
products/: admin.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_cartitem.py
